# openmc_lite

./: .env.development  Cargo.toml  Makefile.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml
assets/themes/: light.theme.toml  ligth.theme.toml
src/: args.rs  lib.rs  main.rs  stats.rs
src/data/: mod.rs
src/data/theme/: mod.rs  theme_type.rs
src/download_svc/: faces.rs  icons.rs  mod.rs
src/resources/: fonts.rs  icon.rs  icon_loader.rs  mod.rs
src/screens/: account.rs  home.rs  instances.rs  mod.rs  preferences.rs
src/screens/instances/: create.rs  mod.rs  utils.rs
src/settings/: load.rs  mod.rs  save.rs
src/widgets/: central_panel.rs  covered_image.rs  grid_wrapped.rs  icon_button.rs  image_button.rs  mod.rs  modal.rs  progress_button.rs  steps.rs  tabs.rs  title_bar.rs  toast.rs
src/widgets/notifications/: mod.rs
